--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3"
+    "semantic-ui-react": "^2.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
